--- a/src/Components/styles/Picture.module.css
+++ b/src/Components/styles/Picture.module.css
@@ -1,20 +1,22 @@
 .article {
     height: 100vh;
-    width: 100vw;
+    width: auto;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: fill;
+    background-size: cover;
     display: flex;
     place-items: center;
     overflow: hidden;
     position: relative;
+    
+  
 }
 
 .picture {
-    display: inline-flex;
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
+ 
+    width: auto;
+    height: auto;
+    filter: contrast(1.55) brightness(0.55);
 }
 
 .header {
