--- a/src/Components/styles/Picture.module.css
+++ b/src/Components/styles/Picture.module.css
@@ -31,6 +31,8 @@
     height: fit-content;
     margin: auto;
     text-shadow: 0 0 45px black;
+    font-weight: 600;
+    
 }
 
 .subheader {
@@ -46,6 +48,7 @@
     padding-top: 20vh;
     margin: auto;
     text-shadow: 0 0 45px black;
+    font-weight: 600;
   
    
 }
