fixed style bug on album and started on contact page

--- a/src/Components/styles/Album_styles.css
+++ b/src/Components/styles/Album_styles.css
@@ -2,13 +2,20 @@
     width: 99%;
     margin: auto;
     max-height: 80vh;
+    min-height: 80vh;
     object-fit: fill;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    box-shadow: 4px 4px 12px rgb(163, 163, 163);
+
    
   }
 
   .carousel-inner{
    max-height:80vh;
+   min-height: 80vh;
   }
   .carousel-item > img { 
     max-height: 100vh;
+    min-height: 100vh;
   }
